# attendance-record-flask

./: .gitignore  README.md  app.py  config.py  pyproject.toml
.devcontainer/: devcontainer.json
controllers/: __init__.py  admin.py  database.py  day.py  user.py
documents/: 要件定義書.md
models/: day.py  month.py  user.py
templates/: admin.html  base.html  end.html  error.html  login.html  register.html  start.html
