[tool.poetry]
name = "attendance-record-flask"
version = "0.1.0"
description = ""
authors = ["YusukeNakashima <yuusukerego@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-sqlalchemy = "^3.1.1"
flask = "^3.0.3"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
